Use local Ollama instead of inside docker

--- a/.env-template
+++ b/.env-template
@@ -1,16 +1,22 @@
-# Base 64 string of the license.key file
+# Gravitee License (base64 encoded)
 GRAVITEE_LICENSE=PUT_YOUR_BASE64_LICENSE_HERE
 
+# Gravitee API Management
 APIM_REGISTRY=graviteeio
-APIM_VERSION=4.10.1
-APIM_VERSION_GATEWAY=4.10.1-debian #Debian version is needed to run the local AI models used for the Guard Rails policy
+APIM_VERSION=4.10.4
+APIM_VERSION_GATEWAY=4.10.4-debian #Debian version is needed to run the local AI models used for the Guard Rails policy
 
+# Gravitee Access Management
 AM_REGISTRY=graviteeio
 AM_VERSION=4.10.0
 
+# Gravitee Alerting Engine
 AE_VERSION=2.3.2
 
-MONGODB_VERSION=8.0.17
-ELASTIC_VERSION=9.2.4
+# Databases versions
+MONGODB_VERSION=8.0.18
+ELASTIC_VERSION=9.2.5
 
+# AI
 OLLAMA_VERSION=0.14.2
+MCP_INSPECTOR_VERSION=latest
