--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   ### MongoDB
   mongodb:
-    image: mongo:${MONGODB_VERSION:-8.0.17} # https://hub.docker.com/_/mongo/tags?name=7.0
+    image: mongo:${MONGODB_VERSION:-8.0.18} # https://hub.docker.com/_/mongo/tags?name=8.0
     container_name: gio-apim-mongodb
     restart: always
     volumes:
@@ -19,7 +19,7 @@ services:
 
   ### Elasticsearch
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION:-9.2.4} # https://www.docker.elastic.co/r/elasticsearch/elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION:-9.2.5} # https://www.docker.elastic.co/r/elasticsearch/elasticsearch
     container_name: gio-apim-elasticsearch
     restart: always
     ports:
@@ -52,26 +52,26 @@ services:
     networks:
       - southbound
 
-  ### Kibana
-  kibana:
-    image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION:-9.2.4} # https://www.docker.elastic.co/r/kibana/kibana
-    container_name: gio-apim-kibana
-    restart: always
-    ports:
-      - "5601:5601"
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-    volumes:
-      - data-kibana:/usr/share/kibana/data
-    environment:
-      ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
-    networks:
-      - southbound
+  ### Kibana (Elasticsearch UI, to explore in depth the data stored in Elasticsearch, useful for token consumption analytics, not yet visible in the APIM UI (planned 4.11))
+  # kibana:
+  #   image: docker.elastic.co/kibana/kibana:${ELASTIC_VERSION:-9.2.5} # https://www.docker.elastic.co/r/kibana/kibana
+  #   container_name: gio-apim-kibana
+  #   restart: always
+  #   ports:
+  #     - "5601:5601"
+  #   depends_on:
+  #     elasticsearch:
+  #       condition: service_healthy
+  #   volumes:
+  #     - data-kibana:/usr/share/kibana/data
+  #   environment:
+  #     ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
+  #   networks:
+  #     - southbound
 
   ### Gravitee API Management Gateway
   apim-gateway:
-    image: ${APIM_REGISTRY:-graviteeio}/apim-gateway:${APIM_VERSION_GATEWAY:-latest}
+    image: ${APIM_REGISTRY:-graviteeio}/apim-gateway:${APIM_VERSION_GATEWAY:-latest} # https://hub.docker.com/r/graviteeio/apim-gateway/tags?name=4.10
     container_name: gio-apim-gateway
     restart: always
     ports:
@@ -88,6 +88,8 @@ services:
       interval: 2s
       timeout: 2s
       retries: 10
+    volumes:
+      - ./apim-gateway-models:/opt/graviteeio-gateway/models
     environment:
       ### LICENSE
       - gravitee_license_key=${GRAVITEE_LICENSE}
@@ -128,8 +130,7 @@ services:
       test: >
         sh -c '
         response=$$(curl -s -u admin:adminadmin http://localhost:18083/_node/health);
-        status=$$(echo "$$response" | grep "\"healthy\": true");
-        if [ -z "$$status" ]; then echo "false"; else echo "true"; fi
+        if echo "$$response" | grep -Eq "\"healthy\"[[:space:]]*:[[:space:]]*false"; then exit 1; else exit 0; fi
         ' > /dev/null
       interval: 2s
       timeout: 2s
@@ -195,7 +196,7 @@ services:
 
   ### Gravitee Access Management Gateway
   am-gateway:
-    image: ${AM_REGISTRY:-graviteeio}/am-gateway:${AM_VERSION:-latest}
+    image: ${AM_REGISTRY:-graviteeio}/am-gateway:${AM_VERSION:-latest} # https://hub.docker.com/r/graviteeio/am-gateway/tags?name=4.10
     container_name: gio-am-gateway
     restart: always
     ports:
@@ -219,12 +220,27 @@ services:
     container_name: gio-am-management-api
     restart: always
     ports:
-      - "8093:8093"
+      - "8093:8093" # Management API Entrypoint
+      - "18093:18093" # Internal API, used for monitoring and management purposes
     depends_on:
       mongodb:
         condition: service_healthy
+    healthcheck:
+      test: >
+        sh -c '
+        response=$$(curl -s -u admin:adminadmin http://localhost:18093/_node/health);
+        if echo "$$response" | grep -Eq "\"healthy\"[[:space:]]*:[[:space:]]*false"; then exit 1; else exit 0; fi
+        ' > /dev/null
+      interval: 2s
+      timeout: 2s
+      retries: 10
     environment:
+      ### LICENSE
       - gravitee_license_key=${GRAVITEE_LICENSE}
+      ### Internal API (Core Service)
+      - gravitee_services_core_http_host=0.0.0.0
+      - gravitee_services_metrics_enabled=true
+      ### MANAGEMENT DB - MONGO DB
       - gravitee_management_mongodb_uri=mongodb://mongodb:27017/graviteeam?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
       - gravitee_oauth2_mongodb_uri=mongodb://mongodb:27017/graviteeam?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
       - gravitee_dataPlanes_0_mongodb_uri=mongodb://mongodb:27017/graviteeam?serverSelectionTimeoutMS=5000&connectTimeoutMS=5000&socketTimeoutMS=5000
@@ -312,7 +328,7 @@ services:
     restart: "no"
     depends_on:
       am-management-api:
-        condition: service_started
+        condition: service_healthy
       apim-management-api:
         condition: service_healthy
       openfga:
@@ -340,7 +356,7 @@ services:
 
   ### Alert Engine
   alert-engine:
-    image: graviteeio/ae-engine:${AE_VERSION:-latest}
+    image: graviteeio/ae-engine:${AE_VERSION:-latest} # https://hub.docker.com/r/graviteeio/ae-engine/tags?name=2
     container_name: gio-alert-engine
     restart: always
     environment:
@@ -350,32 +366,32 @@ services:
 
   # --- AI Agents Components ---
 
-  ### Ollama LLM Runtime
-  ollama:
-    image: ollama/ollama:${OLLAMA_VERSION:-latest}
-    container_name: ollama-llm-runtime
-    restart: unless-stopped
-    # ports:
-    #   - "11434:11434" # Commented out to avoid conflicts if Ollama is already running on the host
-    volumes:
-      - ollama_data:/root/.ollama
-    environment:
-      - OLLAMA_HOST=0.0.0.0
-    healthcheck:
-      test: ["CMD", "/bin/sh", "-c", "ollama list | grep -q 'qwen3:0.6b'"]
-      interval: 5s
-      timeout: 10s
-      retries: 60 # Accomodate for qwen3:0.6b model download time (523MB)
-      start_period: 5s
-    entrypoint: ["/bin/sh", "-c"]
-    command: 
-      - |
-        ollama serve &
-        sleep 5
-        ollama pull qwen3:0.6b || true
-        wait
-    networks:
-      - southbound
+  # ### Ollama LLM Runtime (Optional - prefer local Ollama)
+  # ollama:
+  #   image: ollama/ollama:${OLLAMA_VERSION:-latest} # https://hub.docker.com/r/ollama/ollama/tags
+  #   container_name: ollama-llm-runtime
+  #   restart: unless-stopped
+  #   # ports:
+  #   #   - "11434:11434" # Commented out to avoid conflicts if Ollama is already running on the host
+  #   volumes:
+  #     - ollama_data:/root/.ollama
+  #   environment:
+  #     - OLLAMA_HOST=0.0.0.0
+  #   healthcheck:
+  #     test: ["CMD", "/bin/sh", "-c", "ollama list | grep -q 'qwen3:0.6b'"]
+  #     interval: 5s
+  #     timeout: 10s
+  #     retries: 60 # Accomodate for qwen3:0.6b model download time (523MB)
+  #     start_period: 5s
+  #   entrypoint: ["/bin/sh", "-c"]
+  #   command: 
+  #     - |
+  #       ollama serve &
+  #       sleep 5
+  #       ollama pull qwen3:0.6b || true
+  #       wait
+  #   networks:
+  #     - southbound
 
   ### Hotel Booking Fake API
   hotel-booking-api:
@@ -420,18 +436,13 @@ services:
       dockerfile: ./hotel-booking-a2a-agent/Dockerfile
     container_name: hotel-booking-a2a-agent
     depends_on:
-      ollama:
-        condition: service_healthy
       hotel-booking-api:
         condition: service_healthy
       apim-gateway:
         condition: service_healthy
     environment:
       - LLM_BASE_URL=http://gio-apim-gateway:8082/llm-proxy
-      - LLM_API_KEY=not-needed
-      # - LLM_MODEL=qwen3:0.6b
       - LLM_MODEL=ollama:qwen3:0.6b
-      # - LLM_MODEL=gemini:gemini-3-flash-preview
       - LLM_TEMPERATURE=0.3
       - MCP_HTTP_URLS=http://gio-apim-gateway:8082/hotels/mcp
       - AGENT_SERVER_PORT=8001
@@ -449,7 +460,7 @@ services:
 
   ## MCP Inspector
   mcp-inspector:
-    image: ghcr.io/modelcontextprotocol/inspector:latest
+    image: ghcr.io/modelcontextprotocol/inspector:${MCP_INSPECTOR_VERSION:-latest}
     container_name: mcp-inspector
     ports:
       - "6274:6274"
