refactor: Update project naming and enhance agent response parsing
- Changed project name references from "Agent Live Graph" to "Gravitee AI Agent Inspector" in CSS and server files.
- Improved agent response parsing logic to handle various response structures.
- Updated the event classification to include additional request and response details.
- Enhanced the TCP server event processing to better manage A2A message events.
- Adjusted Docker Compose configuration for clarity in service environment variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -523,9 +523,8 @@ services:
     environment:
     ### Web UI Configuration
       - HTTP_PORT=9002 # Port for serving the Web UI and WebSocket
-    ### Gravitee Gateways Logs, Metrics and Traces
+    ### Gravitee Gateways Logs & Metrics
       - TCP_PORT=9001 # Port for receiving TCP events from the APIM Gateway's TCP Reporter
-      - JAEGER_API=http://jaeger:16686 # For fetching trace details to enrich the visualization
     networks:
       - southbound
       - northbound
